[package]
name = "temp-mongo"
description = "temporary mongo instance meant for unit tests"
version = "0.0.1"
edition = "2021"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["dep:tokio", "mongodb/tokio-runtime"]

[dependencies]
mongodb = { version = "2.7.1", default-features = false, features = ["serde_bytes"] }
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["process", "fs"], optional = true }

[dev-dependencies]
assert2 = "0.3.11"
