[package]
name = "temp-mongo"
description = "temporary mongo instance meant for unit tests"
license = "MIT"
version = "0.1.2"
edition = "2021"
publish = ["crates-io"]

keywords = ["mongo", "database", "test", "temporary", "isolated"]
categories = ["development-tools::testing", "database", "virtualization"]
repository = "https://github.com/rocsys/temp-mongo"
readme = "README.md"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["mongodb/tokio-runtime"]
async-std-runtime = ["mongodb/async-std-runtime"]

[dependencies]
mongodb = { version = "2.7.1", default-features = false, features = ["serde_bytes"] }
tempfile = "3.8.1"
futures-util = "0.3.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.23.1"


[dev-dependencies]
assert2 = "0.3.11"
async-std = "1.12.0"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }

